deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlybudget-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: onlybudget
  ports:
    - name: http
      port: 80
      targetPort: http
